--- a/react-to-do-list/src/styles.css
+++ b/react-to-do-list/src/styles.css
@@ -22,6 +22,13 @@ body {
     width: 400px;
     margin: 100px auto;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    width: 100%;
 }
 
 h1 {
@@ -57,23 +64,25 @@ p {
     cursor: pointer;
 }
 
-ul {
-    margin-top: 2rem;
+.list {
+    margin-top: 3rem;
     list-style: none;
-    padding: 0 20px;
-    height: 450px;
+    padding: 0 50px;
+    height: 420px;
     scrollbar-width: none;
     overflow-y: auto;
+    width: 100%;
 }
 
 .list-item {
     background-color: white;
-    height: 2rem;
-    margin: 0.8rem;
+    height: 2.5rem;
+    margin-bottom: 0.8rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 5px;
+    width: 100%;
 }
 
 .list-item span {
@@ -93,12 +102,26 @@ ul {
     background-color: transparent;
     border-radius: 4px;
     height: 90%;
-    width: 2rem;
+    width: 2.5rem;
 }
 
 .btn:hover {
     cursor: pointer;
 }
 
+.clear-btn {
+    background-color: transparent;
+    border: none;
+    font-size: .9rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+    margin-top: 1rem;
+}
 
+.clear-btn:hover {
+    cursor: pointer;
+    color: var(--box-border);
+}
 
