--- a/src/modal-style.css
+++ b/src/modal-style.css
@@ -14,8 +14,8 @@
     background-color: white;
     border-radius: 8px;
     padding: 2rem;
-    width: 20%;
-    height: 30%;
+    width: 400px;
+    height: 300px;
 }
 
 .modal-header {
