--- a/src/components/modal-style.css
+++ b/src/components/modal-style.css
@@ -1,58 +1,59 @@
 .modal-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgb(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(3px);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-window {
-    background-color: white;
-    border-radius: 8px;
-    padding: 2rem;
-    width: 400px;
-    height: 300px;
+  background-color: white;
+  border: 1px solid #c2c2c2;
+  border-radius: 8px;
+  padding: 2rem;
+  width: 400px;
+  height: 300px;
 }
 
 .modal-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 2rem;
-    height: 1.8rem;
-    margin-bottom: 2rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 2rem;
+  height: 1.8rem;
+  margin-bottom: 2rem;
 }
 
 .modal-text {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
 .close {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .modal-footer {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .button {
-    border: none;
-    width: 5rem;
-    height: 2rem;
-    border-radius: 8px;
-    cursor: pointer;
+  border: none;
+  width: 5rem;
+  height: 2rem;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 .confirm-btn {
-    background-color: var(--black);
-    color: white;
+  background-color: var(--black);
+  color: white;
 }
 
 .confirm-btn:hover {
-    background-color: #464646;
+  background-color: #464646;
 }
