--- a/src/styles.css
+++ b/src/styles.css
@@ -24,11 +24,13 @@ body {
 
 .center {
   width: 500px;
-  margin: 60px auto;
+  margin: 40px auto;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
+  padding: 30px;
 }
 
 form {
@@ -98,7 +100,6 @@ p {
 }
 
 .list-item {
-  background-color: white;
   height: 2.5rem;
   margin-bottom: 0.8rem;
   display: flex;
@@ -109,6 +110,7 @@ p {
 }
 
 .list-item span {
+  background-color: white;
   border: 1px solid var(--box-border);
   height: 100%;
   width: 90%;
@@ -122,7 +124,7 @@ p {
 
 .btn {
   border: 1px solid var(--box-border);
-  background-color: transparent;
+  background-color: white;
   border-radius: 4px;
   height: 90%;
   min-width: 2.5rem;
