--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,18 @@ body {
   overflow: auto;
 }
 
+.hello {
+  display: flex;
+  justify-content: center;
+}
+
+#note-outline {
+  position: absolute;
+  top: -100px;
+  height: 1000px;
+  z-index: -2;
+}
+
 .center {
   width: 500px;
   margin: 40px auto;
@@ -76,7 +88,7 @@ p {
 .list {
   margin-top: 3rem;
   list-style: none;
-  height: 380px;
+  height: 300px;
   padding: 0 20px;
   overflow-y: auto;
   width: 90%;
@@ -141,7 +153,7 @@ p {
   flex-direction: column;
   gap: 0.5rem;
   align-items: center;
-  margin-top: 1.5rem;
+  margin-top: 6rem;
 }
 
 .clear-btn:hover {
